  * misc-nonfree: microchip: Add firmware for Microchip Ethernet PHYs
  * misc-nonfree: nxp: Add firmware for NXP Ultra Wide Band
  * misc-nonfree: nxp: Add firmware for NXP BT UART
  * misc-nonfree: renesas: Add firmware for R-Car USB3 controller
  * misc-nonfree: ti: Add firmware for TI Keystone QMSS Accumulator PDSP
  * ti-connectivity: Move TI VPE firmware to misc-nonfree

 -- Diederik de Haas <didi.debian@cknow.org>  Thu, 18 Jan 2024 14:00:00 +0100

firmware-nonfree (20230625-2) unstable; urgency=medium

  [ Diederik de Haas ]
  * Update to linux-support 6.5.0-5
  * misc-nonfree: Add Nvidia Ampere GA103/GA104/GA106/GA107 links
    (Closes: #1040910, #1058991)

 -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 19 Dec 2023 18:01:10 +0100

firmware-nonfree (20230625-1) unstable; urgency=medium

  [ Dmitry Baryshkov ]
  * New upstream version:
    - cxgb4: Update firmware to revision 1.27.3.0
    - rtlwifi: Update firmware for RTL8188EU to v28.0
    - rtlwifi: Add firmware v6.0 for RTL8192FU
    - ice: update ice DDP comms package to 1.3.40.0
    - amdgpu: DMCUB updates for various AMDGPU asics (Closes: #1040185)
    - amdgpu: update aldebaran firmware for amd.5.5 release
    - amdgpu: update sienna cichlid firmware for amd.5.5 release
    - amdgpu: update navy flounder firmware for amd.5.5 release
    - amdgpu: update GC 10.3.6 firmware for amd.5.5 release
    - amdgpu: update psp 13.0.5 firmware for amd.5.5 release
    - amdgpu: update vcn 3.1.2 firmware for amd.5.5 release
    - amdgpu: update arcturus firmware for amd.5.5 release
    - amdgpu: update dimgrey cavefish firmware for amd.5.5 release
    - amdgpu: update beige goby firmware for amd.5.5 release
    - amdgpu: update green sardine firmware for amd.5.5 release
    - amdgpu: update GC 11.0.0 firmware for amd.5.5 release
    - amdgpu: update PSP 13.0.0 firmware for amd.5.5 release
    - amdgpu: update SMU 13.0.0 firmware for amd.5.5 release
    - amdgpu: update VCN 4.0.0 firmware for amd.5.5 release