@@ -4,7 +4,8 @@ Priority: optional
 Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
 Uploaders: Bastian Blank <waldi@debian.org>, Steve Langasek <vorlon@debian.org>, maximilian attems <maks@debian.org>, Ben Hutchings <benh@debian.org>, Salvatore Bonaccorso <carnil@debian.org>
 Build-Depends: debhelper-compat (= 13)
-Standards-Version: 4.0.1
+Standards-Version: 4.3.0
+Rules-Requires-Root: no
 Vcs-Git: https://salsa.debian.org/kernel-team/firmware-nonfree.git
 Vcs-Browser: https://salsa.debian.org/kernel-team/firmware-nonfree
 XS-Autobuild: yes
